fix(frontend): fix icon align in app header

--- a/frontend_lib/src/component/PopinFixed/PopinFixed.styl
+++ b/frontend_lib/src/component/PopinFixed/PopinFixed.styl
@@ -15,7 +15,7 @@
   &__header
     display flex
     align-items center
-    margin 5px 5px 5px 30px
+    margin 5px 10px 5px 30px
     height 60px
     border-bottom 1px solid mediumGrey
     & > *
@@ -50,6 +50,7 @@
       padding 3px 7px
       & > i
         font-size fontSizeMedium
+        vertical-align middle
   &__option
     &__menu
       & > div
